--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,243 @@
     transform: rotate(360deg);
   }
 }
+
+.AppAll {
+  background-color: #e6ffe6;
+
+  /* background-image: url(https://vectorgrovepreview.azureedge.net/3/17a/317a1f8.jpg?st=2019-11-06T10%3A03%3A41Z&se=2039-12-31T22%3A00%3A00Z&sp=r&sv=2018-03-28&sr=c&sig=zblTCxEF2g7nMxSIOzivUbXvPyq%2B%2Fz5hxWjVoAbSdWw%3D); */
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+.containerCat {
+  display: flex;
+  overflow-x: scroll;
+  height: fit-content;
+  width: 100%;
+  padding: 2px 0;
+  margin-top: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+
+.containerIng {
+  display: flex;
+  overflow-x: scroll;
+  height: fit-content;
+  width: 100%;
+  background-color: #e6ffe6;
+  margin-top: 5px;
+}
+
+.containerRec {
+  display: flex;
+  overflow-x: scroll;
+  width: 100%;
+  background-color: #e6ffe6;
+  margin-top: 5px;
+}
+
+.searchContainer {
+  padding: 1rem;
+  display: inline-grid;
+  width: stretch;
+  column-count: 2;
+  text-align: center;
+
+}
+
+
+.card {
+  flex-shrink: 0;
+  width: 100px;
+  height: 110px;
+  border-radius: 5px;
+  margin-left: 5px;
+  margin-top: 5px;
+  margin-bottom: 2px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-color: white;
+  text-align: center;
+}
+
+.cardCat {
+  flex-shrink: 0;
+  width: 100px;
+  height: 110px;
+  border-radius: 5px;
+  margin-left: 5px;
+  margin-top: 5px;
+  margin-bottom: 2px;
+  border-style: solid;
+  border-color: black;
+  border-width: 0.5px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-color: white;
+  text-align: center;
+  font-size: 10px;
+}
+
+.cardIng {
+  flex-shrink: 0;
+  width: 100px;
+  height: 120px;
+  border-radius: 5px;
+  margin-left: 5px;
+  margin-top: 5px;
+  margin-bottom: 2px;
+  border-style: solid;
+  border-color: black;
+  border-width: 0.5px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-color: white;
+  text-align: center;
+  font-size: 10px;
+}
+
+.qrCode {
+  width: 200px;
+  height: 200px;
+  border-radius: 10px;
+  align-self: center;
+}
+
+.textbox {
+border-bottom: black;
+}
+
+.icons {
+  max-height: 30px;
+}
+
+.nameButton {
+  margin-left: 30px;
+}
+
+.ecoIcon {
+  align-self: center;
+  vertical-align: bottom;
+  padding: 2%
+}
+
+
+/* Bordered form */
+.formSign {
+  border: 3px solid #f1f1f1;
+}
+
+/* Full-width inputs */
+input[type=text], input[type=password] {
+  width: 80%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+.nameInput{
+  width: 80%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Set a style for all buttons */
+button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 50%;
+  margin-left: 5px;
+}
+.saveBtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 0px 0;
+  border: none;
+  cursor: pointer;
+  width: 50%;
+  margin-left: 30%;
+  margin-right: 30%;
+  border-radius: 5px;
+}
+
+/* Add a hover effect for buttons */
+button:hover {
+  opacity: 0.8;
+}
+
+/* Extra style for the cancel button (red) */
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
+}
+
+/* Center the avatar image inside this container */
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+}
+
+/* Avatar image */
+img.avatar {
+  width: 40%;
+  border-radius: 50%;
+}
+
+/* Add padding to containers */
+.container {
+  padding: 16px;
+}
+
+/* The "Forgot password" text */
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+  span.psw {
+    display: block;
+    float: none;
+  }
+  .cancelbtn {
+    width: 100%;
+  }
+}
+
+input[type=text], input[type=password], input[type=email] {
+  width: 80%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  margin-left: 5px;
+}
+
+.nameForm {
+  text-align: center;
+  display: inline-block;
+}
+
